hphp/hack/test/typecheck/generics_restrictions/report_pos/covariance2.php
<?hh

interface X<+T> {
  /* HH_FIXME[4120] */
  public function test(T $x): void;
  /* HH_FIXME[4120] */
  public function test2(T... $x): void;
}
